<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaPrincipal"
    android:padding="25dp"
    android:background="@drawable/bordalayout">

    <TextView
        android:id="@+id/textLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/alfa_slab_one"
        android:padding="15dp"
        android:text="@string/nome_APP_Tela_Principal"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/viewLinha"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/white"
        android:layout_below="@id/textLogo"/>

    <RelativeLayout
            android:layout_below="@id/viewLinha"
            android:layout_marginTop="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp">
        <Button
            android:id="@+id/bt_Tela_lacamento_Custo"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/lancamento_de_custo"
            android:textColor="@drawable/cor_texto_botao"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:background="@drawable/botao"/>
        <Button
            android:id="@+id/bt_Tela_Lancamento_Producao"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/bt_Tela_lacamento_Custo"
            android:fontFamily="casual"
            android:text="@string/lancamento_de_producao"
            android:textColor="@drawable/cor_texto_botao"
            android:padding="10dp"
            android:background="@drawable/botao"/>
        <Button
            android:id="@+id/bt_Tela_Custo_x_Producao"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/bt_Tela_Lancamento_Producao"
            android:fontFamily="casual"
            android:text="@string/custo_x_producao"
            android:textColor="@drawable/cor_texto_botao"
            android:padding="10dp"
            android:background="@drawable/botao"/>
        <Button
            android:id="@+id/bt_Tela_CustoTotal"
            android:layout_marginTop="30dp"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/bt_Tela_Custo_x_Producao"
            android:layout_alignParentLeft="true"
            android:fontFamily="casual"
            android:text="@string/custo_total"
            android:textColor="@drawable/cor_texto_botao"
            android:padding="10dp"
            android:background="@drawable/botao"/>
        <Button
            android:id="@+id/bt_Tela_ProducaoTotal"
            android:layout_marginTop="30dp"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/bt_Tela_Custo_x_Producao"
            android:layout_alignParentRight="true"
            android:fontFamily="casual"
            android:text="@string/producao_total"
            android:textColor="@drawable/cor_texto_botao"
            android:padding="10dp"
            android:background="@drawable/botao"/>
        <ImageView
            android:layout_below="@id/bt_Tela_ProducaoTotal"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"/>
    </RelativeLayout>

</RelativeLayout>