<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LancamentoCusto"
    android:padding="25dp"
    android:background="@drawable/bordalayout"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/textLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/alfa_slab_one"
        android:padding="15dp"
        android:text="@string/lancamento_de_custo"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/viewLinha"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/white"
        android:layout_below="@id/textLogo" />

    <TextView
        android:id="@+id/textNomeFazendaMES"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/NomeFazenda_Mes_Lancamento"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:layout_below="@id/viewLinha" />

    <View
        android:id="@+id/viewLinha2"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/white"
        android:layout_below="@id/textNomeFazendaMES" />

    <TextView
        android:id="@+id/textData_Lancamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/data_lancamento"
        android:layout_alignParentLeft="true"
        android:textSize="16sp"
        android:layout_below="@id/viewLinha2" />

    <EditText
        android:id="@+id/editData_Lancamento"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_below="@+id/textData_Lancamento"
        android:ems="10"
        android:textSize="16dp"
        android:gravity="center"
        android:padding="4dp"
        android:inputType="date"
        android:background="@drawable/edit_text" />

    <DatePicker
        android:id="@+id/DP_data_Lancamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/aquamarine"
        android:datePickerMode="spinner"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@+id/editData_Pagamento"
        android:calendarViewShown="false"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/textValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Valor do Produto"
        android:layout_alignStart="@id/editValor"
        android:textSize="16sp"
        android:layout_below="@id/viewLinha2" />

    <EditText
        android:id="@+id/editValor"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_below="@+id/textValor"
        android:layout_alignParentRight="true"
        android:textSize="16dp"
        android:gravity="center"
        android:padding="4dp"
        android:inputType="numberDecimal"
        android:background="@drawable/edit_text" />

    <TextView
        android:id="@+id/textDocOriginal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/numero_da_nota"
        android:layout_alignParentLeft="true"
        android:textSize="18sp"
        android:layout_below="@id/editData_Lancamento" />

    <EditText
        android:id="@+id/editNumberoNota"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/textDocOriginal"
        android:textSize="16dp"
        android:gravity="center"
        android:padding="4dp"
        android:inputType="number"
        android:hint="xxxxxxxx"
        android:background="@drawable/edit_text" />

    <TextView
        android:id="@+id/textFornecedor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Fornecedor"
        android:layout_alignParentLeft="true"
        android:textSize="18sp"
        android:layout_below="@id/editNumberoNota" />

    <EditText
        android:id="@+id/editFornecedor"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/textFornecedor"
        android:textSize="16dp"
        android:gravity="center"
        android:hint="AGROTEC - Produtos Agropecuários"
        android:padding="4dp"
        android:inputType="text"
        android:background="@drawable/edit_text" />

    <TextView
        android:id="@+id/texttipo_produção_cultura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Tipo de produção /cultura"
        android:layout_alignParentLeft="true"
        android:textSize="18sp"
        android:layout_below="@id/editFornecedor" />

    <Spinner
        android:id="@+id/list_itemTipoProducao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/texttipo_produção_cultura"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/textDescricao_Produto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Descrição do produto"
        android:layout_alignParentLeft="true"
        android:textSize="18sp"
        android:layout_below="@id/list_itemTipoProducao" />

    <EditText
        android:id="@+id/editDescricao_Produto"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/textDescricao_Produto"
        android:textSize="16dp"
        android:gravity="center"
        android:hint="Ração mineral suplementada"
        android:padding="4dp"
        android:inputType="text"
        android:background="@drawable/edit_text" />

    <TextView
        android:id="@+id/textData_Validade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Data de validade"
        android:layout_alignParentLeft="true"
        android:textSize="18sp"
        android:layout_below="@id/editDescricao_Produto" />

    <EditText
        android:id="@+id/editData_Validade"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_below="@+id/textData_Validade"
        android:textSize="16dp"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:padding="4dp"
        android:inputType="date"
        android:background="@drawable/edit_text" />

    <TextView
        android:id="@+id/textData_Pagamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Data de Pagamento"
        android:layout_alignParentRight="true"
        android:textSize="18sp"
        android:layout_below="@id/editDescricao_Produto" />

    <EditText
        android:id="@+id/editData_Pagamento"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_below="@+id/textData_Pagamento"
        android:textSize="16dp"
        android:gravity="center"
        android:layout_alignParentRight="true"
        android:padding="4dp"
        android:inputType="date"
        android:background="@drawable/edit_text" />

    <DatePicker
        android:id="@+id/DP_data_Validade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/aquamarine"
        android:datePickerMode="spinner"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@+id/editData_Pagamento"
        android:calendarViewShown="false"
        android:visibility="invisible" />

    <DatePicker
        android:id="@+id/DP_data_Pagamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/aquamarine"
        android:datePickerMode="spinner"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@+id/editData_Pagamento"
        android:calendarViewShown="false"
        android:visibility="invisible" />

    <Button
        android:id="@+id/bt_Limpar_Lancamento_Custo"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/Texto_button_limpar"
        android:textColor="@drawable/cor_texto_botao"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:layout_above="@+id/bt_Salvar_Lancamento_Custo"
        android:background="@drawable/botao" />

    <Button
        android:id="@+id/bt_Salvar_Lancamento_Custo"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/Texto_button_salvar"
        android:textColor="@drawable/cor_texto_botao"
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/botao" />

</RelativeLayout>
