<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LancamentoProducao"
    android:padding="25dp"
    android:background="@drawable/bordalayout">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/alfa_slab_one"
                android:padding="15dp"
                android:text="@string/lancamento_de_producao"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/viewLinha"
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/white"
                android:layout_below="@id/textLogo" />

            <TextView
                android:id="@+id/textNomeFazendaMES"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Lançamento de Produção mês de agosto / 2019 Fazenda Morro Alto - SFB"
                android:textAlignment="center"
                android:layout_centerHorizontal="true"
                android:textSize="18sp"
                android:layout_below="@id/viewLinha" />

            <View
                android:id="@+id/viewLinha2"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/white"
                android:layout_below="@id/textNomeFazendaMES" />

            <TextView
                android:id="@+id/textData_Lancamento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/data_lancamento"
                android:layout_alignParentLeft="true"
                android:textSize="16sp"
                android:layout_below="@id/viewLinha2" />

            <EditText
                android:id="@+id/editData_Lancamento_Producao"
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:layout_below="@+id/textData_Lancamento"
                android:ems="10"
                android:textSize="16dp"
                android:gravity="center"
                android:padding="4dp"
                android:inputType="date"
                android:hint="DD/MM/AAAA"
                android:background="@drawable/edit_text" />

            <TextView
                android:id="@+id/texttipo_produção_cultura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Tipo de produção /cultura"
                android:layout_alignParentLeft="true"
                android:textSize="16sp"
                android:layout_below="@id/editData_Lancamento_Producao" />

            <Spinner
                android:id="@+id/list_itemTipoProducao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/texttipo_produção_cultura"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/textValorUnitario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Valor Unitário / Produto / Serviço"
                android:layout_alignParentLeft="true"
                android:textSize="16sp"
                android:layout_below="@id/list_itemTipoProducao" />

            <EditText
                android:id="@+id/editValorUnitario"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_below="@+id/textValorUnitario"
                android:textSize="16dp"
                android:gravity="center"
                android:padding="4dp"
                android:inputType="numberDecimal"
                android:background="@drawable/edit_text" />

            <TextView
                android:id="@+id/textQuantidadeProducao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Quantidade de Produção"
                android:layout_alignParentLeft="true"
                android:textSize="16sp"
                android:layout_below="@id/editValorUnitario" />

            <EditText
                android:id="@+id/editQuantidadeProducao"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:layout_below="@+id/textQuantidadeProducao"
                android:textSize="16dp"
                android:gravity="center"
                android:padding="4dp"
                android:inputType="numberDecimal"
                android:background="@drawable/edit_text" />

            <TextView
                android:id="@+id/textUnidadeMedida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Unidade de medida"
                android:textSize="16sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/radio_Litros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="kg"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/radio_Kilos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="L"
                android:textSize="12sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/textValorTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Valor Total"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_below="@id/editQuantidadeProducao" />

            <EditText
                android:id="@+id/editValorTotal"
                android:layout_width="250dp"
                android:layout_height="35dp"
                android:layout_below="@+id/textValorTotal"
                android:textSize="16dp"
                android:gravity="center"
                android:padding="4dp"
                android:inputType="numberDecimal"
                android:background="@drawable/edit_text" />

            <Button
                android:id="@+id/bt_Limpar_Lancamento_Producao"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/Texto_button_limpar"
                android:textColor="@drawable/cor_texto_botao"
                android:layout_centerHorizontal="true"
                android:padding="10dp"
                android:layout_above="@+id/bt_Salvar_Lancamento_Producao"
                android:background="@drawable/botao" />

            <Button
                android:id="@+id/bt_Salvar_Lancamento_Producao"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/Texto_button_salvar"
                android:textColor="@drawable/cor_texto_botao"
                android:padding="10dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/botao" />

            <DatePicker
                android:id="@+id/DP_data_Lancamento_Producao"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white_smoke"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:visibility="invisible" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>